# resolveai-python-api

./: .gitignore  Pipfile  config.py  main.py  pyproject.toml
prisma/: schema.prisma
src/apis/: __init__.py
