[tool.poetry]
name = "resolveai python api"
version = "0.1.0"
description = "Python API to utilize proper tooling"
authors = ["Rem Kim <rem4ik4ever@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.8.0"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
